force-app/main/default/objects/Feedback__c/fields/Candidate_Email__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Email__c</fullName>
    <formula>Job_Application__r.Candidate__r.Email__c</formula>
    <label>Candidate Email</label>
    <type>Text</type>
</CustomField>