force-app/main/default/objects/Feedback__c/fields/Candidate_Name__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Name__c</fullName>
    <formula>Job_Application__r.Candidate__r.First_Name__c  + &quot; &quot; +  Job_Application__r.Candidate__r.Last_Name__c</formula>
    <label>Candidate Name</label>
    <type>Text</type>
</CustomField>