force-app/main/default/objects/Feedback__c/fields/Experience_with_Recruiter__c.field-meta.xml
<CustomField>
    <fullName>Experience_with_Recruiter__c</fullName>
    <label>Experience with Recruiter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>