force-app/main/default/objects/Feedback__c/fields/Follow_up_Requested__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Follow up Requested</label>
    <type>Checkbox</type>
</CustomField>