force-app/main/default/objects/Feedback__c/fields/Willing_to_Reapply__c.field-meta.xml
<CustomField>
    <fullName>Willing_to_Reapply__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Willing to Reapply</label>
    <type>Checkbox</type>
</CustomField>